--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,52 +1,20 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-          crossorigin="anonymous">
 </head>
 <body>
-<!-- create navigation bar ( header) -->
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed"
-                    data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span> <span
-                    class="icon-bar"></span> <span class="icon-bar"></span> <span
-                    class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#" th:href="@{/}">Registration and
-                Login Module</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
+<p>Witaj na mojej stronie</p>
 <br>
-<br>
-<br>
-<div class="container" style="align-items: center">
-    <p>Witaj na mojej stronie</p>
-    <br>
-    <p>Załóż konto, aby korzystać z serwisu</p><br>
-    <p th:text="'Witaj '+ ${username}"></p>
-    <form action="/sign-up" method="get">
-        <input type="submit" value="Registration">
-    </form>
-    <form action="/login" method="get">
-        <input type="submit" value="Sign In">
-    </form>
-</div>
-
+<p>Załóż konto, aby korzystać z serwisu</p><br>
+<p th:text="'Witaj '+ ${username}"></p>
+<form action="/sign-up" method="get">
+    <input type="submit" value="Rejestracja">
+</form>
+<form action="/login" method="get">
+    <input type="submit" value="Zaloguj się">
+</form>
 </body>
 </html>
