--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,8 +22,7 @@
                     class="icon-bar"></span> <span class="icon-bar"></span> <span
                     class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" th:href="@{/}">Registration and
-                Login Module</a>
+            <a class="navbar-brand" href="#" th:href="@{/}">Registration form</a>
         </div>
     </div>
 </nav>
@@ -37,13 +36,10 @@
             <h1> User Login Page </h1>
             <form th:action="@{/login}" method="post">
 
-                <!-- error message -->
                 <div th:if="${param.error}">
-                    <div class="alert alert-danger">Invalid username or
-                        password.</div>
+                    <div class="alert alert-danger">Invalid username or password.</div>
                 </div>
 
-                <!-- logout message -->
                 <div th:if="${param.logout}">
                     <div class="alert alert-info">You have been logged out.</div>
                 </div>
