--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -21,39 +21,45 @@
                     class="icon-bar"></span> <span class="icon-bar"></span> <span
                     class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" th:href="@{/}">Registration and
-                Login Module</a>
+            <a class="navbar-brand" href="#" th:href="@{/}">Registration form</a>
         </div>
     </div>
 </nav>
 
 <br>
 <br>
-<!-- Create HTML registration form -->
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
 
-            <!-- success message -->
             <div th:if="${param.success}">
-                <div class="alert alert-info">You've successfully registered
-                    to our awesome app!</div>
+                <div class="alert alert-info">You've successfully registered !</div>
             </div>
 
             <h1>Registration</h1>
 
             <form th:action="@{/register}" method="post" th:object="${user}">
                 <div class="form-group">
-                    <label class="control-label" for="username"> Username:  </label>
+                    <label class="control-label" for="username"> Username: </label>
                     <input id="username" class="form-control" th:field="*{username}"
-                           required autofocus="autofocus" />
+                           required autofocus="autofocus"/>
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label" for="password"> Password </label> <input
+                    <label class="control-label" for="password"> Password: </label> <input
                         id="password" class="form-control" type="password"
-                        th:field="*{password}" required autofocus="autofocus" />
+                        th:field="*{password}" required autofocus="autofocus"/>
                 </div>
+
+                <div class="form-group">
+                    <label class="control-label" th:for="roles">Choose roles: </label>
+                    <select class="form-control" th:field="*{roles}" th:id="roles">
+                        <option value="">Nothing selected</option>
+                        <option th:each="roles: ${T(comexample.springsecurityregistrationform.model.Role).values()}" th:value="${roles}" th:text="${roles}">Role</option>
+                    </select>
+
+                </div>
+
                 <div class="form-group">
                     <button type="submit" class="btn btn-success">Register</button>
                     <span>Already registered? <a href="/" th:href="@{/login}">Login
